# hon

./: .gitignore  CHANGES.md  LICENSE  README.md  pyproject.toml
hon/: __init__.py  cli.py  config.py  project.py  templates.py  utils.py
hon/commands/: __init__.py  build.py  create.py  docs.py  install.py  test.py
hon/templates/: .gitignore  CHANGES.md  LICENSE  README.md
hon/templates/tests/: test_{project.name}.py_
hon/templates/{project.name}/: __version__.py_
hon/tools/: poetry.py  pyenv.py  setup.py
