[tool.poetry]
name = "hon"
version = "0.1.0"
description = "Simple, opinionated CLI to run common build and deployment tasks."
license = "MIT"
authors = ["John Didion <github@didion.net>"]
readme = "README.md"
homepage = "https://github.com/jdidion/hon"
repository = "https://github.com/jdidion/hon.git"
classifiers = ["Development Status :: 4 - Beta"]
include = [
    "CHANGES.md",
    "hon/templates/**/*"
]

[tool.poetry.dependencies]
python = "^3.6"
autoclick = "^0.2.2"
delegator = "^0.1.1"
gitpython = "^2.1.11"
tomlkit = "^0.5.3"

[tool.poetry.scripts]
hon = "hon:cli.hon"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
